[tool.poetry]
name = "repl_python3_beta_Nitro-generator-and-checker-by-slicybtw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.0.1"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
